--- a/1ProyectoP3/Datos/Datos.csproj
+++ b/1ProyectoP3/Datos/Datos.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexion.cs" />
     <Compile Include="Datos1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
