--- a/1ProyectoP3/Presentacion.csproj
+++ b/1ProyectoP3/Presentacion.csproj
@@ -56,6 +56,18 @@
     <Compile Include="Administrador.Designer.cs">
       <DependentUpon>Administrador.cs</DependentUpon>
     </Compile>
+    <Compile Include="AsitenteAdministrativo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AsitenteAdministrativo.Designer.cs">
+      <DependentUpon>AsitenteAdministrativo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Encomiendas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Encomiendas.Designer.cs">
+      <DependentUpon>Encomiendas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,14 +76,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuario.cs">
+    <Compile Include="Reportes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Usuario.Designer.cs">
-      <DependentUpon>Usuario.cs</DependentUpon>
+    <Compile Include="Reportes.Designer.cs">
+      <DependentUpon>Reportes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tiquetes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tiquetes.Designer.cs">
+      <DependentUpon>Tiquetes.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Administrador.resx">
       <DependentUpon>Administrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AsitenteAdministrativo.resx">
+      <DependentUpon>AsitenteAdministrativo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -85,8 +106,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Usuario.resx">
-      <DependentUpon>Usuario.cs</DependentUpon>
+    <EmbeddedResource Include="Reportes.resx">
+      <DependentUpon>Reportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiquetes.resx">
+      <DependentUpon>Tiquetes.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
