--- a/1ProyectoP3/Logica/Logica.csproj
+++ b/1ProyectoP3/Logica/Logica.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logica1.cs" />
+    <Compile Include="LogicaReportes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
