--- a/1ProyectoP3/Presentacion.csproj
+++ b/1ProyectoP3/Presentacion.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,18 +51,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Administrador.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Administrador.Designer.cs">
-      <DependentUpon>Administrador.cs</DependentUpon>
-    </Compile>
-    <Compile Include="AsitenteAdministrativo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AsitenteAdministrativo.Designer.cs">
-      <DependentUpon>AsitenteAdministrativo.cs</DependentUpon>
-    </Compile>
     <Compile Include="CierreCajaEncomienda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,18 +83,6 @@
     <Compile Include="Reportes.Designer.cs">
       <DependentUpon>Reportes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tiquetes.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Tiquetes.Designer.cs">
-      <DependentUpon>Tiquetes.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Administrador.resx">
-      <DependentUpon>Administrador.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AsitenteAdministrativo.resx">
-      <DependentUpon>AsitenteAdministrativo.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CierreCajaEncomienda.resx">
       <DependentUpon>CierreCajaEncomienda.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,9 +106,6 @@
     </Compile>
     <EmbeddedResource Include="Reportes.resx">
       <DependentUpon>Reportes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Tiquetes.resx">
-      <DependentUpon>Tiquetes.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
